Cleanup and bug fixes.

--- a/todo.org
+++ b/todo.org
@@ -47,13 +47,27 @@
   CLOSED: [2017-04-16 Sun 08:19]
   - State "DONE"       from "STARTED"    [2017-04-16 Sun 08:19]
   - State "STARTED"    from "TODO"       [2017-04-16 Sun 08:19]
-* TODO Add option to use partial dataset per epoch, or to do validation more frequently than per epoch
-* TODO Add option to get_dataset to support not loading the entire dataset unless we need to
-* TODO Add option to visualize/montage for the border color.
-* TODO visualize/weights should take a layer and find the weights
-* TODO visualize/timelapse should use the file created datetime instead of name to order
-* TODO Add option to visualize for visualizing both train and test data for comparison
-* TODO Add ability to visualize/activations to do it for each checkpoint
-* TODO Write summary info to text file for later (non-interactive) review.
-* TODO Add option to visualization/weights/activations/etc to allow other image palettes/colors than grayscale (for better visualization)
+
+
+
+* Data
+** TODO Add option to use partial dataset per epoch, or to do validation more frequently than per epoch
+** TODO Add option to get_dataset to support not loading the entire dataset unless we need to
+* Visualization
+** TODO Add option to visualize/montage for the border color.
+** TODO visualize/weights should take a layer and find the weights
+** TODO visualize/timelapse should use the file created datetime instead of name to order
+** TODO Add option to visualize for visualizing both train and test data for comparison
+** TODO Add ability to visualize/activations to do it for each checkpoint
+** TODO Add option to visualization/weights/activations/etc to allow other image palettes/colors than grayscale (for better visualization)
+* Training
+** TODO Write summary info to text file for later (non-interactive) review.
+** TODO Add ability to plot losses for variational autoencoder (gen loss and latent loss)
+
+
+* STARTED Add ability to sample from latent vector for such models.
+  - State "STARTED"    from "TODO"       [2017-04-21 Fri 18:29]
+* TODO Add ability to load dataset into persistent memory to speed up development cycle time.
+* TODO Add ability of variational autoencoder to use different batch sizes instead of fixed 256 each time.
+* TODO Clean up network graph. 
 
