--- a/todo.org
+++ b/todo.org
@@ -54,7 +54,10 @@
 ** TODO Add option to use partial dataset per epoch, or to do validation more frequently than per epoch
 ** TODO Add option to get_dataset to support not loading the entire dataset unless we need to
 * Visualization
-** TODO Add option to visualize/montage for the border color.
+** DONE Add option to visualize/montage for the border color.
+   CLOSED: [2017-04-24 Mon 17:23]
+   - State "DONE"       from "STARTED"    [2017-04-24 Mon 17:23]
+   - State "STARTED"    from "TODO"       [2017-04-24 Mon 17:23]
 ** TODO visualize/weights should take a layer and find the weights
 ** TODO visualize/timelapse should use the file created datetime instead of name to order
 ** TODO Add option to visualize for visualizing both train and test data for comparison
